@@ -12,6 +12,9 @@ What's New in Python 2.6 alpha 2?
 Core and builtins
 -----------------
 
+- Issue 2379: Raise a Py3K warning for __getitem__ or __getslice__ on
+  exception instances.
+
 - Issue #2371: Add a Py3k warning when catching an exception that
   doesn't derive from BaseException.  Issue #2341: Add a Py3k warning
   when raising an exception that doesn't derive from BaseException.
